fix: navbar mobile gap + cleanup

--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -71,10 +71,12 @@
   .navbar-list {
     height: auto;
     margin: 0;
-    gap: 0.5rem;
+    gap: 1.25rem;
 
-    a {
+    a,
+    button {
       margin: 0;
+      width: 100%;
     }
 
     .logo-scroll-top {
@@ -84,47 +86,5 @@
 
   ul {
     flex-direction: column;
-  }
-}
-
-.navbar-books {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
-  border-bottom: 5px solid #8b4513;
-  width: fit-content;
-}
-.wood-shelf {
-  height: 5px;
-}
-
-.shelf {
-  width: 120px;
-  height: 50px;
-  display: flex;
-  align-items: center;
-  padding-left: 1rem;
-
-  > a {
-    display: block;
-    transition: all 0.3s ease;
-    transform: translateX(20px);
-    &:hover {
-      transform: scale(1.05) translateX(20px);
-    }
-  }
-}
-
-.shelf.active {
-  color: #fff;
-  font-weight: bold;
-
-  > a {
-    display: block;
-    transform: scale(1.05);
-    &:hover {
-      transform: scale(1.05);
-    }
   }
 }
